--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
 <body>
     <div id="root">
         <!-- HTML -->
-        <h1>Hello World!</h1>
+        <h1>Not Rendered</h1>
     </div>
     <!-- JavaScript -->
-    <script>
+    <!-- <script>
         const heading = document.createElement("h1")
         heading.innerHTML = "Hello World from JavaScript !"
         const root = document.getElementById("root")
         root.appendChild(heading)
-    </script>
+    </script> -->
 
-    <!-- React Importings-->
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <!-- React Importings -->
+    <!-- <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script> -->
 
     <!-- React  -->
-    <script src = "./App.js">
+    <script type="module" src = "./App.js">
     </script>
 
 </body>
