--- a/index.html
+++ b/index.html
@@ -5,28 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./index.css"></link>
+    <link rel="stylesheet" href="./index.css">
+    </link>
 </head>
 
 <body>
     <div id="root">
-        <!-- HTML -->
         <h1>Not Rendered</h1>
     </div>
-    <!-- JavaScript -->
-    <!-- <script>
-        const heading = document.createElement("h1")
-        heading.innerHTML = "Hello World from JavaScript !"
-        const root = document.getElementById("root")
-        root.appendChild(heading)
-    </script> -->
-
-    <!-- React Importings -->
-    <!-- <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script> -->
-
-    <!-- React  -->
-    <script type="module" src = "./App.js">
+    <script type="module" src="./src/App.js">
     </script>
 
 </body>
